[package]
name = "to_hood_profile_serializer"
version = "0.1.0"
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
description = "A short script to convert Toronto Neighbourhood Profile XLSX files to JSON"
documentation = "https://github.com/cam-rod/to_hood_profile_serializer"
readme = "README.md"
homepage = "https://github.com/cam-rod/to_hood_profile_serializer"
repository = "https://github.com/cam-rod/to_hood_profile_serializer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
